# home-automation

./: .gitignore  AGENTS.md  CHANGELOG.md  SKILLS.md  home-automation-architecture-plan.md  install.sh  requirements.txt
config-examples/: backfill-routes.example.yaml  control.example.yaml  control_secrets.example.yaml  devices.example.yaml  gap-watcher.env.example  levoit-devices.example.yaml  midea.env.example  tasmota-devices.example.yaml  weather.env.example
docs/: AGENTS.md  CHECKPOINT.md  CUTOVER-245-to-210.md  ENVIRONMENT.md  FOLLOWUPS.md  ROADMAP.md  device-onboarding.md  failover-drill.md  openwrt-prestage.md  power-optimization.md  switchbot-ble-history-protocol.md  tasmota-s31-intake.md
edge/: AGENTS.md  FIRMWARE-GUIDE.md  MATRIX.md  MODULES.md  aranet-245-relay.md
edge/esp32c3/main/: CMakeLists.txt  app_main.c  ble_scan.c  ble_scan.h  ha_mqtt.c  ha_mqtt.h  ha_ota.c  ha_ota.h  ha_relay.c  ha_sntp.c  ha_wifi.c  secrets.example.h  switchbot_decode.h
edge/esp32s3-eth/main/: CMakeLists.txt  app_main.c  ble_scan.c  ble_scan.h  gatt_exec.c  gatt_history.c  gatt_history.h  ha_config.c  ha_eth.c  ha_eth.h  ha_led.c  ha_led.h  ha_mqtt.c  ha_mqtt.h  ha_ota.c  ha_relay.h  ha_wifi.c  secrets.example.h
failover/: AGENTS.md  README.md  cluster-doctor.sh  cluster.env.example  deploy.sh  device-buffers.env  dictator-files.manifest  failover-drill.sh  failover-runbook.md  healthcheck.sh  keepalived.conf.tmpl  notify.sh  primary-watch.sh  provision-peer.sh  reconcile-history.sh  reconcile-parquet.sh  reconcile-tuning.env.example  sync-standby.sh
firmware/: AGENTS.md
firmware/components/ha_ble_scan/: CMakeLists.txt  README.md  ha_ble_scan.c
firmware/components/ha_ble_scan/include/: ha_ble_scan.h
provisioning/: 01-bootstrap-iso.md  02-full-server-spec.md  03-sneakernet-updates.md  04-post-install.md  AGENTS.md  README.md  broker-auth-cutover.md  control-go-live.md  stage2-finish.sh
provisioning/reterminal/beachhead/main/: CMakeLists.txt  beachhead_main.c  ble_spike.c  ble_spike.h  bsp_display.c  bsp_display.h  idf_component.yml  secrets.example.h  ui_tiles.c  ui_tiles.h
server/: AGENTS.md  device_registry.py  requirements.txt
systemd/: ha-api-tls.service  ha-api.service  ha-cluster-heartbeat.service  ha-compactor.service  ha-compactor.timer  ha-controller.service  ha-edge-history.service  ha-edge-mapper.service  (+17 more)
(+222 files in other folders)
